join requests seem to be working smoothly

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
 move rating area to top of resume page - see web visual studio marketplace extensions for inspiration
 
 profile page so user knows who they are
+
+try auto code security scanning: https://owasp.org/www-community/Free_for_Open_Source_Application_Security_Tools
