--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,7 @@ profile page so user knows who they are
 try auto code security scanning: https://owasp.org/www-community/Free_for_Open_Source_Application_Security_Tools
 
 convert all model choices to class enums so they can be used outside of models.py
+
+figure out foreign key issues when trying to delete DB records
+
+image previews must be delivered via ajax to reduce loading time
