--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
-move rating area to top of resume page - see web visual studio marketplace extensions for inspiration
+increase security of uploading files if you ever deploy to production: https://stackoverflow.com/questions/3648421/only-accept-a-certain-file-type-in-filefield-server-side/43540603#43540603
+Current pdf validation is poor - users could easily bypass it
+Good UX should automatically convert to pdf, which I haven't done since many packages require Word to be installed or an API key
+
+? move rating area to top of resume page - see web visual studio marketplace extensions for inspiration
 
 profile page so user knows who they are
 
