--- a/TODO.txt
+++ b/TODO.txt
@@ -16,3 +16,4 @@ image previews must be delivered via ajax to reduce loading time
 
 Bug: When navbar becomes toggled for small screen, nav elements originally floated to right appear in wrong order on dropdown list.
 Bug: Toggling responsive navbar causes hamburger icon to shift a few pixels due to relative/absolute positioning
+Bug: 'Upload a resume' button on index page gets wrapped wrong when screen is about 640px
