--- a/TODO.txt
+++ b/TODO.txt
@@ -20,3 +20,5 @@ https://github.com/Belval/pdf2image: Mac users will have to install poppler.
 - Don't think this is a problem with Docker, poppler is specified in environment.yml
 
 Pagination: https://pytutorial.com/how-to-make-a-pagination-with-django-and-ajaxjquery/
+
+Docker: find some way to not repeat install libreoffice step every time
